--- a/src/components/styles/PhilosophySection.css
+++ b/src/components/styles/PhilosophySection.css
@@ -1,41 +1,67 @@
 @media only screen and (max-width: 415px) {
-  .philosophy-section-container {
-    display: grid;
-    grid-template-rows: 0.3fr 0.3fr 0.3fr;
-    justify-items: center;
-    align-items: center;
-    text-align: center;
+  .principles-container {
     background-color: white;
+    display: grid;
+    grid-template-rows: auto;
   }
 
-  .philosophy-section-title {
+  .principles-main-title {
     font-family: Bebas;
-    font-size: 2.5rem;
-    margin: 5%;
+    text-align: center;
+    font-size: 2.75rem;
     color: #292929;
     margin-bottom: 0;
+    margin-top: 5%;
   }
 
-  .philosophy-section-description {
-    font-family: Barlow;
-    font-size: 1.5rem;
-    margin: 0;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: #292929;
+  .principles-list {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    padding: 8%;
+    margin-top: 0;
   }
 
-  .philosophy-description-container {
+  .principles-list::-webkit-scrollbar {
+    display: none;
+  }
+
+  .principles-list > * {
+    scroll-snap-align: center;
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100vw;
+  }
+
+  .principles-item {
     display: grid;
-    grid-auto-columns: 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 0px 0px;
-    grid-template-areas:
-      ". ."
-      ". .";
+    position: relative;
+    background-color: #292929;
+    width: fit-content;
     justify-items: center;
     align-items: center;
-    width: 100%;
+    padding: 8%;
+    padding-top: 0;
+    scroll-snap-stop: always;
+    padding-left: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .principles-item-title {
+    text-align: center;
+    font-size: 2rem;
+    color: white;
+    font-family: Bebas;
+    margin-bottom: 0;
+    margin-top: 5%;
+  }
+
+  .principles-item-description {
+    text-align: center;
+    font-size: 1.3rem;
+    color: white;
+    font-family: Barlow;
+    margin: 0;
   }
 }
