--- a/src/components/styles/AboutUsSection.css
+++ b/src/components/styles/AboutUsSection.css
@@ -1,37 +1,39 @@
 @media only screen and (max-width: 415px) {
-  .self-section-container {
+  .about-section-container {
+    background-color: #292929;
     display: grid;
-    grid-template-rows: repeat(3, 0.3fr);
+    grid-template-rows: auto;
     justify-items: center;
     align-items: center;
   }
 
-  .self-section-title {
+  .about-section-title {
     font-family: Bebas;
     font-size: 2.25rem;
-    margin: 5%;
+    margin: 4%;
     color: white;
     margin-bottom: 0;
+    text-align: center;
   }
 
-  .self-section-description {
+  .about-section-description {
     font-family: Barlow;
     font-size: 1.5rem;
     margin: 0;
     margin-left: 5%;
     margin-right: 5%;
-    text-align: center;
     color: white;
+    text-align: center;
   }
 
-  .self-section-btn {
+  .about-section-btn {
     width: fit-content;
     font-family: Bebas;
-    font-size: 1.75rem;
-    margin: 7%;
+    font-size: 2rem;
+    margin-top: 6%;
+    margin-bottom: 15%;
     background-color: transparent;
     color: white;
     border: solid 3px white;
-    margin-bottom: 10%;
   }
 }
