--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 415px) {
   .contact-container {
     background-color: white;
-    padding: 3%;
+    padding: 1%;
   }
   .contact-form {
     display: grid;
@@ -17,15 +17,33 @@
     text-align: center;
   }
 
+  .contact-description {
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin: 0;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+    color: #292929;
+  }
+
   .contact-form label,
   .contact-form input {
     font-family: Barlow;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin: 0;
     width: auto;
     margin-left: 5%;
     margin-right: 5%;
     color: #292929;
+  }
+
+  .contact-form input {
+    background-color: #e4e4e4;
+  }
+
+  .contact-form label {
+    font-weight: 1000;
   }
 
   #message {
@@ -34,6 +52,9 @@
     font-size: 1.25rem;
     margin-left: 5%;
     margin-right: 5%;
+    background-color: #e4e4e4;
+    height: 100%;
+    resize: none;
   }
 
   .contact-form .contact-btn {
@@ -59,5 +80,6 @@
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+    margin-bottom: 0;
   }
 }
