--- a/src/components/styles/MainSection.css
+++ b/src/components/styles/MainSection.css
@@ -2,7 +2,7 @@
   .main-section-container {
     position: relative;
     margin: 0;
-    background-color: white;
+    background-color: #292929;
   }
 
   .main-section-bg {
@@ -57,11 +57,13 @@
     background-color: transparent;
     color: white;
     border: 3px solid white;
-    width: 80%;
+    width: 60%;
+    text-align: center;
     position: absolute;
     top: 89%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    text-decoration: none;
   }
 }
