--- a/src/components/styles/ProgramsSection.css
+++ b/src/components/styles/ProgramsSection.css
@@ -26,7 +26,7 @@
   }
 
   .programs-section-btn {
-    width: 100%;
+    width: fit-content;
     font-family: Bebas;
     font-size: 2rem;
     margin-top: 5%;
