--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -1,2 +1,18 @@
 @media only screen and (max-width: 414px) {
-} ;
+}
+
+@media only screen and (min-width: 1280px) {
+  .navbar-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
+  }
+
+  .navbar-link {
+    text-decoration: none;
+    color: #b5b5b5;
+    font-size: 1.5rem;
+    font-family: Bebas;
+  }
+}
