--- a/src/components/styles/AboutUs.css
+++ b/src/components/styles/AboutUs.css
@@ -107,3 +107,101 @@
     margin: 0;
   }
 }
+
+@media only screen and (min-width: 1280px) {
+  .about-us-container {
+    display: grid;
+    grid-template-columns: auto;
+    background-color: white;
+  }
+
+  .about-us-header {
+    display: grid;
+    grid-template-rows: auto;
+    justify-items: center;
+    align-items: center;
+    background-color: #292929;
+  }
+
+  .about-us-title {
+    font-family: Bebas;
+    text-align: center;
+    font-size: 2.75rem;
+    color: white;
+    margin-bottom: 0;
+    margin-top: 1%;
+  }
+
+  .about-us-subtitle {
+    font-family: Barlow;
+    text-align: center;
+    font-size: 1.5rem;
+    color: white;
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 0;
+  }
+
+  .details-instructions-text {
+    text-align: center;
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin-bottom: 1%;
+    margin-top: 1%;
+    font-weight: 1000;
+  }
+
+  .about-us-list-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .principles-container {
+    background-color: white;
+    display: grid;
+    grid-template-rows: auto;
+  }
+
+  .principles-main-title {
+    font-family: Bebas;
+    text-align: center;
+    font-size: 2.75rem;
+    color: #292929;
+    margin-bottom: 0;
+    margin-top: 2%;
+  }
+
+  .principles-list {
+    display: grid;
+    grid-template-rows: auto;
+    gap: 5px;
+    justify-items: center;
+  }
+
+  .principles-item {
+    display: grid;
+    position: relative;
+    background-color: #292929;
+    width: 80%;
+    justify-items: center;
+    align-items: center;
+    padding: 1%;
+  }
+
+  .principles-item-title {
+    text-align: center;
+    font-size: 2rem;
+    color: white;
+    font-family: Bebas;
+    margin-bottom: 0;
+    margin-top: 1%;
+  }
+
+  .principles-item-description {
+    text-align: center;
+    font-size: 1.3rem;
+    color: white;
+    font-family: Barlow;
+    margin: 0;
+  }
+}
