--- a/src/components/styles/AboutUsSection.css
+++ b/src/components/styles/AboutUsSection.css
@@ -30,10 +30,58 @@
     width: fit-content;
     font-family: Bebas;
     font-size: 2rem;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    background-color: transparent;
+    color: white;
+    border: solid 3px white;
+    text-decoration: none;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .about-section-container {
+    background-color: #292929;
+    display: grid;
+    grid-template-rows: auto;
+    justify-items: center;
+    align-items: center;
+  }
+
+  .about-section-title {
+    font-family: Bebas;
+    font-size: 2.25rem;
+    margin: 2%;
+    color: white;
+    margin-bottom: 0;
+    text-align: center;
+  }
+
+  .about-section-description {
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    color: white;
+    text-align: center;
+  }
+
+  .about-section-btn {
+    text-decoration: none;
+    padding: 1%;
+    width: fit-content;
+    font-family: Bebas;
+    font-size: 2rem;
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
     color: white;
     border: solid 3px white;
+    margin: 0;
+    margin-bottom: 2%;
   }
 }
