--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -5,7 +5,10 @@
   }
   .contact-form {
     display: grid;
-    grid-template-rows: repeat(3, 0.3fr);
+    grid-template-rows: auto;
+    gap: 10px;
+    justify-items: center;
+    align-items: center;
   }
 
   .contact-title {
@@ -20,11 +23,91 @@
   .contact-description {
     font-family: Barlow;
     font-size: 1.5rem;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 3%;
     margin-left: 5%;
     margin-right: 5%;
     text-align: center;
     color: #292929;
+  }
+
+  .contact-form input {
+    font-family: Barlow;
+    font-size: 1.25rem;
+    margin: 0;
+    width: auto;
+    margin-left: 5%;
+    margin-right: 5%;
+    color: #292929;
+    width: 80%;
+    background-color: #e4e4e4;
+  }
+
+  #message {
+    width: 80%;
+    font-family: Barlow;
+    font-size: 1.25rem;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color: #e4e4e4;
+    height: 100%;
+    resize: none;
+  }
+
+  .contact-btn {
+    width: fit-content;
+    font-family: Bebas;
+    font-size: 1.75rem;
+    margin: 2%;
+    background-color: transparent;
+    color: #292929;
+    border: solid 3px #292929;
+    margin-bottom: 3%;
+  }
+
+  .message-success {
+    font-size: 1.5rem;
+    font-family: Barlow;
+    font-style: italic;
+    color: green;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    margin-bottom: 2%;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .contact-container {
+    background-color: white;
+    padding: 2%;
+  }
+  .contact-form {
+    display: grid;
+    grid-template-rows: auto;
+    justify-items: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .contact-title {
+    font-family: Bebas;
+    font-size: 2.25rem;
+    color: #292929;
+    margin-bottom: 0;
+    text-align: center;
+  }
+
+  .contact-description {
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin-top: 0;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+    color: #292929;
+    margin-bottom: 2%;
   }
 
   .contact-form label,
@@ -40,6 +123,7 @@
 
   .contact-form input {
     background-color: #e4e4e4;
+    width: 50%;
   }
 
   .contact-form label {
@@ -47,7 +131,7 @@
   }
 
   #message {
-    width: auto;
+    width: 50%;
     font-family: Barlow;
     font-size: 1.25rem;
     margin-left: 5%;
@@ -57,19 +141,14 @@
     resize: none;
   }
 
-  .contact-form .contact-btn {
-    justify-items: center;
-    align-items: center;
-  }
-
   .contact-btn {
     width: fit-content;
     font-family: Bebas;
     font-size: 1.75rem;
-    margin: 5%;
     background-color: transparent;
     color: #292929;
     border: solid 3px #292929;
+    margin-top: 1%;
   }
 
   .message-success {
