--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -28,3 +28,35 @@
     padding-right: 3%;
   }
 }
+
+@media only screen and (min-width: 1280px) {
+  .header-container {
+    display: grid;
+    grid-template-columns: 0.19fr 0.19fr 0.43fr 0.19fr;
+  }
+
+  .header-logo {
+    width: 35%;
+    margin: 2%;
+  }
+
+  .join-now-container {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    background-color: #292929;
+  }
+
+  .join-now-btn {
+    font-size: 1.5rem;
+    font-family: Bebas;
+    letter-spacing: 1px;
+    background-color: #292929;
+    color: white;
+    border: 3px solid white;
+    width: auto;
+    text-decoration: none;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
