--- a/src/components/styles/MainSection.css
+++ b/src/components/styles/MainSection.css
@@ -35,7 +35,7 @@
 
   .main-section-description {
     position: absolute;
-    top: 65%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -64,6 +64,80 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .main-section-container {
+    position: relative;
+    margin: 0;
+    background-color: #292929;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .main-section-bg {
+    filter: brightness(50%) contrast(50%) saturate(100%);
+    width: 100%;
+    height: auto;
+  }
+
+  .main-section-bg-2 {
+    filter: brightness(50%) contrast(50%) saturate(125%);
+    width: 100%;
+    height: auto;
+  }
+
+  .main-section-description-container {
+    display: grid;
+    grid-template-rows: 0.5fr 1fr 0.5fr;
+    justify-items: center;
+    align-items: center;
+    background-color: white;
+  }
+
+  .main-section-over-title {
+    font-size: 1.5rem;
+    font-family: Barlow;
+    color: #8c8c8c;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .main-section-title {
+    color: #292929;
+    text-align: center;
+    font-size: 3rem;
+    font-family: Bebas;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: left;
+    margin-bottom: 0;
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+
+  .main-section-description {
+    color: #292929;
+    text-align: left;
+    font-size: 1.75rem;
+    font-family: Barlow;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    width: 90%;
+  }
+
+  .main-section-btn {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3rem;
+    font-family: Bebas;
+    letter-spacing: 1px;
+    background-color: transparent;
+    color: #292929;
+    border: solid 5px #292929;
+    width: 60%;
+    text-align: center;
     text-decoration: none;
   }
 }
