--- a/src/components/styles/ProgramsDetailContainer.css
+++ b/src/components/styles/ProgramsDetailContainer.css
@@ -55,3 +55,52 @@
     max-width: 100vw;
   }
 }
+
+@media only screen and (min-width: 1280px) {
+  .programs-detail-container {
+    display: grid;
+    grid-template-rows: auto;
+    background-color: rgb(237, 237, 237);
+    justify-items: center;
+    align-items: center;
+  }
+
+  .programs-detail-header {
+    background-color: #292929;
+    width: 100%;
+  }
+
+  .instructions-text {
+    text-align: center;
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin-bottom: 0;
+    font-weight: 1000;
+    width: 100%;
+  }
+
+  .programs-detail-title {
+    font-family: Bebas;
+    text-align: center;
+    font-size: 2.75rem;
+    color: white;
+    margin-bottom: 0;
+    margin-top: 1%;
+  }
+
+  .programs-detail-subtitle {
+    font-family: Barlow;
+    text-align: center;
+    font-size: 1.5rem;
+    color: white;
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 0;
+  }
+
+  .programs-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+  }
+}
