--- a/src/components/styles/SelfAssesmentSection.css
+++ b/src/components/styles/SelfAssesmentSection.css
@@ -27,11 +27,56 @@
   .self-section-btn {
     width: fit-content;
     font-family: Bebas;
-    font-size: 1.75rem;
-    margin: 7%;
+    font-size: 2rem;
+    margin-top: 5%;
+    margin-bottom: 5%;
     background-color: transparent;
     color: white;
     border: solid 3px white;
-    margin-bottom: 10%;
+    text-decoration: none;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .self-section-container {
+    display: grid;
+    grid-template-rows: repeat(3, 0.3fr);
+    justify-items: center;
+    align-items: center;
+  }
+
+  .self-section-title {
+    font-family: Bebas;
+    font-size: 2.25rem;
+    margin: 2%;
+    color: white;
+    margin-bottom: 0;
+  }
+
+  .self-section-description {
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin-bottom: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+    color: white;
+  }
+
+  .self-section-btn {
+    text-decoration: none;
+    padding: 1%;
+    width: fit-content;
+    font-family: Bebas;
+    font-size: 2rem;
+    margin-top: 6%;
+    margin-bottom: 15%;
+    background-color: transparent;
+    color: white;
+    border: solid 3px white;
+    margin: 0;
+    margin-bottom: 2%;
   }
 }
