--- a/src/components/styles/AboutUsDetails.css
+++ b/src/components/styles/AboutUsDetails.css
@@ -27,7 +27,57 @@
 
   .about-details-description {
     font-family: Barlow;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    text-align: center;
+    color: white;
+    position: absolute;
+    transition: 1s;
+    margin-left: 16%;
+    margin-right: 16%;
+    transition: 1s;
+  }
+
+  .blurred {
+    filter: saturate(125%) brightness(25%) contrast(65%) blur(3px);
+    transition: 1s;
+  }
+
+  .visible {
+    opacity: 0;
+    transition: 1s;
+  }
+}
+
+@media only screen and (min-width: 416px) and (max-width: 920px) {
+  .about-us-details-container {
+    display: grid;
+    grid-template-columns: auto;
+    justify-items: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .about-details-title {
+    font-family: Bebas;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: white;
+    position: absolute;
+    bottom: 60%;
+    transition: 1s;
+    z-index: 1;
+  }
+
+  .about-details-image {
+    width: 75%;
+    transition: 1s;
+    margin-bottom: 5%;
+  }
+
+  .about-details-description {
+    font-family: Barlow;
+    font-size: 1.2rem;
     text-align: center;
     color: white;
     position: absolute;
