--- a/src/components/styles/MainSection.css
+++ b/src/components/styles/MainSection.css
@@ -1,4 +1,66 @@
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 348px) {
+  .main-section-container {
+    position: relative;
+    margin: 0;
+    background-color: #292929;
+  }
+
+  .main-section-bg {
+    filter: brightness(40%) contrast(40%) saturate(85%);
+    width: 100%;
+  }
+
+  .main-section-title {
+    position: absolute;
+    top: 6%;
+    left: 38%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 2.25rem;
+    font-family: Bebas;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: left;
+  }
+
+  .main-section-description {
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.3rem;
+    font-family: Barlow;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: left;
+    width: 85%;
+  }
+
+  .main-section-btn {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    font-family: Bebas;
+    letter-spacing: 1px;
+    background-color: transparent;
+    color: white;
+    border: 3px solid white;
+    width: 60%;
+    text-align: center;
+    position: absolute;
+    top: 88%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (min-width: 348px) and (max-width: 416px) {
   .main-section-container {
     position: relative;
     margin: 0;
@@ -10,17 +72,9 @@
     width: 100%;
   }
 
-  .main-section-over-title {
-    font-size: 1.5rem;
-    font-family: Barlow;
-    color: #b5b5b5;
-    font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-
   .main-section-title {
     position: absolute;
-    top: 13%;
+    top: 5%;
     left: 38%;
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -35,7 +89,7 @@
 
   .main-section-description {
     position: absolute;
-    top: 60%;
+    top: 58%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -51,7 +105,69 @@
 
   .main-section-btn {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5rem;
+    font-family: Bebas;
+    letter-spacing: 1px;
+    background-color: transparent;
+    color: white;
+    border: 3px solid white;
+    width: 60%;
+    text-align: center;
+    position: absolute;
+    top: 89%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (min-width: 416px) and (max-width: 666px) {
+  .main-section-container {
+    position: relative;
+    margin: 0;
+    background-color: #292929;
+  }
+
+  .main-section-bg {
+    filter: brightness(50%) contrast(50%);
+    width: 100%;
+  }
+
+  .main-section-title {
+    position: absolute;
+    top: 5%;
+    left: 38%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    color: rgb(255, 255, 255);
+    text-align: center;
     font-size: 3rem;
+    font-family: Bebas;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: left;
+  }
+
+  .main-section-description {
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: Barlow;
+    font-weight: 1000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: left;
+    width: 85%;
+  }
+
+  .main-section-btn {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5rem;
     font-family: Bebas;
     letter-spacing: 1px;
     background-color: transparent;
