--- a/src/components/styles/PhilosophySection.css
+++ b/src/components/styles/PhilosophySection.css
@@ -22,6 +22,13 @@
     margin-top: 0;
   }
 
+  .principles-instructions {
+    font-family: Barlow;
+    text-align: center;
+    font-size: 1.25rem;
+    margin: 0;
+  }
+
   .principles-list::-webkit-scrollbar {
     display: none;
   }
