--- a/src/components/styles/ProgramsDetailContainer.css
+++ b/src/components/styles/ProgramsDetailContainer.css
@@ -1,4 +1,62 @@
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 426px) {
+  .programs-detail-container {
+    display: grid;
+    background-color: rgb(237, 237, 237);
+    justify-items: center;
+    align-items: center;
+  }
+
+  .programs-detail-header {
+    background-color: #292929;
+  }
+
+  .instructions-text {
+    text-align: center;
+    font-family: Barlow;
+    font-size: 1.25rem;
+    margin-bottom: 0;
+    font-weight: 1000;
+  }
+
+  .programs-detail-title {
+    font-family: Bebas;
+    text-align: center;
+    font-size: 2.5em;
+    color: white;
+    margin-bottom: 0;
+    margin-top: 5%;
+  }
+
+  .programs-detail-subtitle {
+    font-family: Barlow;
+    text-align: center;
+    font-size: 1.25rem;
+    color: white;
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 0;
+  }
+
+  .programs-list {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    padding: 8%;
+  }
+
+  .programs-list::-webkit-scrollbar {
+    display: none;
+  }
+
+  .programs-list > * {
+    scroll-snap-align: center;
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100vw;
+  }
+}
+
+@media only screen and (min-width: 426px) and (max-width: 635px) {
   .programs-detail-container {
     display: grid;
     background-color: rgb(237, 237, 237);
