cambios de estilos y correccion del recaptcha

--- a/src/components/styles/AboutUs.css
+++ b/src/components/styles/AboutUs.css
@@ -411,6 +411,12 @@
     margin-top: 0;
   }
 
+  .principles-instructions {
+    font-family: Barlow;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
   .principles-list {
     display: grid;
     grid-template-rows: auto;
