--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@ body {
   margin: 0;
   background-color: #292929;
 }
+
+.has-1440-viewport {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
