--- a/src/components/styles/ProgramsDetailContainer.css
+++ b/src/components/styles/ProgramsDetailContainer.css
@@ -235,6 +235,15 @@
     width: 100%;
   }
 
+  .fitr-description {
+    text-align: center;
+    font-family: Barlow;
+    font-size: 1.5rem;
+    margin-bottom: 0;
+    font-weight: 1000;
+    width: 100%;
+  }
+
   .instructions-text {
     text-align: center;
     font-family: Barlow;
@@ -251,6 +260,7 @@
     color: white;
     margin-bottom: 0;
     margin-top: 1%;
+    transition: 1s;
   }
 
   .programs-detail-subtitle {
