--- a/src/components/styles/ProgramsDetailContainer.css
+++ b/src/components/styles/ProgramsDetailContainer.css
@@ -10,6 +10,19 @@
     background-color: #292929;
   }
 
+  .fitr-description {
+    text-align: center;
+    font-family: Barlow;
+    font-size: 1.25rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    font-weight: 1000;
+    width: 90%;
+    border: solid 5px #292929;
+    padding: 1%;
+  }
+
   .instructions-text {
     text-align: center;
     font-family: Barlow;
@@ -221,7 +234,7 @@
   }
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1279px) {
   .programs-detail-container {
     display: grid;
     grid-template-rows: auto;
@@ -238,10 +251,12 @@
   .fitr-description {
     text-align: center;
     font-family: Barlow;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin-bottom: 0;
     font-weight: 1000;
     width: 100%;
+    border: solid 5px #292929;
+    padding: 2%;
   }
 
   .instructions-text {
